# 2048-ai

./: .gitmodules  CMakeLists.txt  README  README.md  requirements.txt  setup.py
ml/gen_games/: gen.sh  mana_files.py
ml/sl-ai/: batch-ai.py  envapp.py  eval-model.py  gamehist.py  linreg-ai.py  modelagent.py  online-ai.py  optimization.py  preprocessing.py  random-ai.py  randomagent.py  train.py
pyx/: CMakeLists.txt  env2048.cpp  env2048.pyx
src/: agent.hh  agent.hxx  ai.hh  debug-ai.hh  debug-eai.hh  dump-ai.hh  eval.hh  expect-ai.hh  expectimax-ai.hh  expectimax-ai.hxx  grid.cc  grid.hh  grid.hxx  heur.cc  heur.hh  heur.hxx  human-agent.hh  human-agent.hxx  ia.hh  main-new.cc  main.cc  min-max-ai.hh  min-max-ai.hxx  monte-carlo.cc  monte-carlo.hh  player.cc  player.hh  player.hxx  proba.cc  proba.hh  replay-agent.hh  replay-agent.hxx  replay.cc  replay.hh  world.cc  world.hh
src_py/: gui.py  main.py  world.py
tests/: CMakeLists.txt  commander.py  cython_check.py  gen_tests.py  grids.txt  json_ts_builder.py  json_ts_reader.py  run-test-suite.py
tests/games/: game1_gridtest_ref  game1_moves  game2_gridtest_ref  game2_moves  game3_gridtest_ref  game3_moves  game4_gridtest_ref  game4_moves  game5_gridtest_ref  game5_moves  game6_gridtest_ref  game6_moves  game7_gridtest_ref  game7_moves  game8_gridtest_ref  game8_moves
